--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+
     <title>GE PC EM J3</title>
 
 </head>
@@ -28,57 +30,6 @@
             <p>Iniciando o Projeto Aluraflix</p>
         </div>
 
-
-
-
-body{
-    background-color: black;
-    color: white;
-    font-family: "Roboto Mono", sans-serif;
-}
-
-.chamada{
-    background-color:rgb(114, 61, 124);
-    padding-top: 80px;
-    padding-bottom: 80px;
-    display: flex;
-    justify-content: center;
-}
-.chamada-texto{
-    margin-right: 5%;
-}
-header{
-    font-size: 25px;
-    text-align: center;
-    margin: 30px;
-}
-
-.categoria-videos{
-    display: flex;
-    overflow-x: auto;
-    gap: 10px;
-    margin-right: 10px;
-}
-h2{
-    margin-left: 10px;
-}
-.categoria{
-    padding-left: 20px;
-    padding-right: 20px;
-}
-p{
-    font-size: 20px;
-}
-
-.categoria-videos img{
-    height: 200px;
-    opacity: 0.5;
-}
-
-.categoria-videos img:hover {
-    border: 5px solid rgb(114, 61, 124);
-    opacity: 1.0;
-}
 
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/OGWzXm2lr1g?si=a2qheBXR-AGD1el3"
