--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/OGWzXm2lr1g?si=a2qheBXR-AGD1el3"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/b0l0t4nOF0E?si=qKjbQyN_Qp_ZnRPk"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -44,20 +44,20 @@
 
         <div class="categoria-videos">
 
-            <a href="https://www.youtube.com/watch?v=LM9lyqnDFz8">
-                <img src="L youtube 2024-10-17.JPG">
+            <a href="https://www.youtube.com/watch?v=SiFCS_g2vp0">
+                <img src="AK youtube 2024-10-16.JPG">
             </a>
 
-            <a href="https://www.youtube.com/watch?v=QPMa5FkByBs">
-                <img src="L youtube 2024-10-24.JPG">
+            <a href="https://www.youtube.com/watch?v=CeYi81fUF-Y">
+                <img src="AK youtube 2024-10-23.JPG">
             </a>
 
-            <a href="https://www.youtube.com/watch?v=ojAUWHpzqMo">
-                <img src="L youtube 2024-10-31.JPG">
+            <a href="https://www.youtube.com/watch?v=Kd-c8hfTDvk">
+                <img src="AK youtube 2024-10-30.JPG">
             </a>
 
-            <a href="https://www.youtube.com/watch?v=flDX5-OAQKw">
-                <img src="L youtube 2024-11-14.JPG">
+            <a href="https://www.youtube.com/watch?v=k9zqQaqt5qM">
+                <img src="AK youtube 2024-11-13.JPG">
             </a>
 
             <a href="https://www.youtube.com/watch?v=RPa6fqFWtWc">
